--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 688,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 661,
+   "execution_count": 689,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 690,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 691,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -179,45 +179,7 @@
      "text": [
       "/Users/aaronduong/Desktop/nlf-automate-rides-1bf1589a2e3e.json\n",
       "1\n",
-      "2\n",
-      "<Worksheet 'Form Responses RESET' id:1076432338>\n",
-      "3\n",
-      "            Timestamp         Name Are you visiting for the first time?  \\\n",
-      "0  4/29/2025 16:34:35   Kyle Hwang                                        \n",
-      "1  4/29/2025 17:47:34  Seojin Kwon                                        \n",
-      "2  4/29/2025 19:29:20  helena song                                        \n",
-      "3  4/29/2025 20:06:32  Clay Murphy                                        \n",
-      "4  4/29/2025 21:09:06       JJ Lee                                        \n",
-      "\n",
-      "  House Church              Where would you like to be picked up?  \\\n",
-      "0               South (Baker, Hanszen, Lovett, Sid Richardson,...   \n",
-      "1               Off Campus (indicate location in the next ques...   \n",
-      "2                  North (Brown, Duncan, Jones, Martel, McMurtry)   \n",
-      "3                                                      Life tower   \n",
-      "4                                                      Life tower   \n",
-      "\n",
-      "  Off Campus address Which service are you attending? Are you a driver?  \\\n",
-      "0                                1st service (9:00AM)                     \n",
-      "1      7550 Kirby Dr             1st service (9:00AM)                     \n",
-      "2                                1st service (9:00AM)                     \n",
-      "3                                1st service (9:00AM)              Yes!   \n",
-      "4                                1st service (9:00AM)                     \n",
-      "\n",
-      "                                     Additional Info  \\\n",
-      "0                                                      \n",
-      "1  CMU lunch plans! (AZ, Jmak, Grace, Hannah, Jan...   \n",
-      "2                        only need a ride for lunch!   \n",
-      "3                                                      \n",
-      "4                                                      \n",
-      "\n",
-      "  Preferred after church plans?  ...                   T  \n",
-      "0                   Back home 💙  ...                      \n",
-      "1                    Flexible 💚  ...                      \n",
-      "2                       Lunch 💛  ...                      \n",
-      "3                    Flexible 💚  ...                      \n",
-      "4                       Lunch 💛  ...                      \n",
-      "\n",
-      "[5 rows x 31 columns]\n"
+      "2\n"
      ]
     }
    ],
@@ -250,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 674,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,15 +912,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "now_cst = datetime.now(ZoneInfo(\"America/Chicago\"))\n",
-    "formatted = now_cst.strftime(\"%m-%d-%Y %H-%M-%S\")\n",
+    "formatted_time = now_cst.strftime(\"%m-%d-%Y %H-%M-%S\")\n",
     "\n",
-    "excel_to_filename = f\"./maps/rides_to/assignments_{formatted}.xlsx\"\n",
-    "excel_back_filename = f\"./maps/rides_back/assignments_{formatted}.xlsx\"\n",
+    "excel_to_filename = f\"./maps/rides_to/assignments_{formatted_time}.xlsx\"\n",
+    "excel_back_filename = f\"./maps/rides_back/assignments_{formatted_time}.xlsx\"\n",
     "\n",
     "def export_assignments_to_excel(rides_to, unassigned_riders_to, rides_from, unassigned_riders_from, output_filename=\"api_allocate.xlsx\"):\n",
     "    wb = Workbook()\n",
@@ -1101,13 +1063,13 @@
     "\n",
     "    wb.save(excel_to_filename)\n",
     "    wb.save(excel_back_filename)\n",
-    "    wb.save(f\"assignments_{formatted}.xlsx\")\n",
-    "    print(f\"Excel file saved to assignments_{formatted}\")"
+    "    wb.save(f\"assignments_{formatted_time}.xlsx\")\n",
+    "    print(f\"Excel file saved to assignments_{formatted_time}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3280,7 +3242,7 @@
     "# HTML snippet for download button (adjust path if needed)\n",
     "download_html = f\"\"\"\n",
     "<div style=\"position: fixed; top: 10px; right: 10px; z-index: 9999;\">\n",
-    "    <a href=\"{excel_to_filename}.xlsx\" download>\n",
+    "    <a href=\"assignments_{formatted_time}.xlsx\" download>\n",
     "        <button style=\"padding: 10px 20px; font-size: 14px; background-color: #4CAF50; color: white; border: none; border-radius: 5px;\">\n",
     "            Download Assignments\n",
     "        </button>\n",
@@ -3296,7 +3258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4999,7 +4961,7 @@
     "# HTML snippet for download button (adjust path if needed)\n",
     "download_html = f\"\"\"\n",
     "<div style=\"position: fixed; top: 10px; right: 10px; z-index: 9999;\">\n",
-    "    <a href=\"{excel_back_filename}.xlsx\" download>\n",
+    "    <a href=\"assignments_{excel_back_filename}.xlsx\" download>\n",
     "        <button style=\"padding: 10px 20px; font-size: 14px; background-color: #4CAF50; color: white; border: none; border-radius: 5px;\">\n",
     "            Download Assignments\n",
     "        </button>\n",
@@ -5015,7 +4977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5036,7 +4998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
