--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -5195,7 +5195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1368,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5210,7 +5210,7 @@
     "\n",
     "<div style=\"z-index: 9999; display: flex; gap: 10px;\">\n",
     "    <a href=\"{excel_filename}\" download>\n",
-    "        <button style=\"padding: 10px 20px; font-size: 14px; background-color: #4CAF50; color: white; border: none; border-radius: 5px;\">\n",
+    "        <button style=\"margin: 10px; padding: 10px 20px; font-size: 14px; background-color: #4CAF50; color: white; border: none; border-radius: 5px;\">\n",
     "            Download Assignments as Excel\n",
     "        </button>\n",
     "    </a>\n",
