--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -5193,7 +5193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1432,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5214,7 +5214,14 @@
     "    </a>\n",
     "</div>\n",
     "\n",
-    "<iframe height=\"2000\" src=\"assignments_table.html\" style=\"border: 1px solid #ccc;\" width=\"100%\"></iframe>\n",
+    "<div style=\"overflow-x: auto; -webkit-overflow-scrolling: touch;\">\n",
+    "  <iframe\n",
+    "    src=\"assignments_table.html\"\n",
+    "    width=\"100%\"\n",
+    "    height=\"2000\"\n",
+    "    style=\"min-width: 100%; border: 1px solid #ccc;\"\n",
+    "  ></iframe>\n",
+    "</div>\n",
     "\"\"\"\n",
     "\n",
     "with open(\"index.html\", \"w\") as f:\n",
