add scrolling to iframe

--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -5215,12 +5215,13 @@
     "</div>\n",
     "\n",
     "<div style=\"overflow-x: auto; -webkit-overflow-scrolling: touch;\">\n",
-    "  <iframe\n",
-    "    src=\"assignments_table.html\"\n",
-    "    width=\"100%\"\n",
-    "    height=\"2000\"\n",
-    "    style=\"min-width: 100%; border: 1px solid #ccc;\"\n",
-    "  ></iframe>\n",
+    "<iframe\n",
+    "  src=\"assignments_table.html\"\n",
+    "  width=\"100%\"\n",
+    "  height=\"2000\"\n",
+    "  style=\"min-width: 1000px; border: 1px solid #ccc;\"\n",
+    "  scrolling=\"yes\"\n",
+    "></iframe>\n",
     "</div>\n",
     "\"\"\"\n",
     "\n",
