add touch action

--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -5214,7 +5214,7 @@
     "    </a>\n",
     "</div>\n",
     "\n",
-    "<div style=\"overflow-x: auto; -webkit-overflow-scrolling: touch;\">\n",
+    "<div style=\"overflow-x: auto; -webkit-overflow-scrolling: touch; touch-action: pan-x\">\n",
     "<iframe\n",
     "  src=\"assignments_table.html\"\n",
     "  width=\"100%\"\n",
