--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1434,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# share to here:\n",
-    "# nlf-automate-rides-service-acc@nlf-automate-rides.iam.gserviceaccount.com  \\\n",
+    "# nlf-automate-rides-service-acc@nlf-automate-rides.iam.gserviceaccount.com\n",
     "link_to_sheet = \"https://docs.google.com/spreadsheets/d/18Zz3i_OQ0jW9ZJsudlpHHXykMwbVr9PkzUzx1-MnRZE/edit?gid=1076432338#gid=1076432338\"\n",
     "sheet_name = \"Form Responses RESET\""
    ]
