do not print the api key

--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1542,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
     "\n",
     "# Access the key\n",
     "JSON_KEY_PATH = os.getenv(\"JSON_KEY_PATH\")\n",
-    "print(JSON_KEY_PATH)\n",
+    "# print(JSON_KEY_PATH)\n",
     "\n",
     "print(1)\n",
     "# Define the scope and authenticate\n",
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1549,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
     "\n",
     "from geopy.geocoders import GoogleV3\n",
     "GOOGLE_API_KEY = os.getenv(\"GOOGLE_API_KEY\")\n",
-    "print(GOOGLE_API_KEY)\n",
+    "# print(GOOGLE_API_KEY)\n",
     "geolocator = GoogleV3(api_key=GOOGLE_API_KEY)\n",
     "\n",
     "# Cache for distance: address → (lat, long)\n",
