change constant for back home and lunch

--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6983,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,10 @@
     "    NORTH_STOP_NAME: \"1601 Rice Boulevard, Houston, TX 77005\",\n",
     "    SOUTH_STOP_NAME: \"6320 Main St, Houston, TX 77005\",\n",
     "    LIFETOWER_STOP_NAME: \"6919 Main St, Houston, TX 77030\",\n",
-    "}"
+    "}\n",
+    "\n",
+    "BACK_HOME_PLAN = \"Back home 💙\"\n",
+    "LUNCH_PLAN = \"Lunch 💛\""
    ]
   },
   {
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7012,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,9 +112,9 @@
     "    \"South\": \"FF93CCEA\",     # Light Cornflower Blue 3 \n",
     "    \"Off\": \"FFFFFFED\",       # light yellow\n",
     "    \"Life\": \"fff4cccc\",      # green\n",
-    "    \"Back home 💙\": \"FFD9D2E9\",      # light purple\n",
+    "    BACK_HOME_PLAN: \"FFD9D2E9\",      # light purple\n",
     "    \"RJM\": \"FFEAD1DC\",       # light pink\n",
-    "    \"Lunch 💛\": \"FFFCE5CD\",     # light orange\n",
+    "    LUNCH_PLAN: \"FFFCE5CD\",     # light orange\n",
     "    \"Flexible 💚\": \"FFCFE2F3\",        # light blue\n",
     "    \"Refreshments\": \"FFB6D7A8\",\n",
     "    \"NLK 🧡\": \"FFFFCCA4\",\n",
@@ -774,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7022,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +800,7 @@
     "    assigned_flexible_drivers = set()\n",
     "\n",
     "    # Step 1: Assign flexible drivers to plans with unmet demand\n",
-    "    for plan in [\"Back home 💙\", \"Lunch 💛\"]:\n",
+    "    for plan in [BACK_HOME_PLAN, LUNCH_PLAN]:\n",
     "        rider_count = len(riders_by_plan[plan])\n",
     "        seat_count = sum(d.amount_seats for d in drivers_by_plan[plan])\n",
     "        needed_seats = rider_count - seat_count\n",
@@ -816,13 +819,13 @@
     "    # Step 2: Remaining flexible drivers default to Lunch\n",
     "    for d in flexible_drivers:\n",
     "        if d not in assigned_flexible_drivers:\n",
-    "            d.plans = \"Lunch 💛\"\n",
+    "            d.plans = LUNCH_PLAN\n",
     "            drivers_by_plan[d.plans].append(d)\n",
     "\n",
     "   # Step 3: Assign plan labels to flexible riders based on excess space\n",
     "    remaining_flexible_riders = list(flexible_riders)\n",
     "\n",
-    "    for plan in [\"Back home 💙\", \"Lunch 💛\"]:\n",
+    "    for plan in [BACK_HOME_PLAN, LUNCH_PLAN]:\n",
     "        rider_count = len(riders_by_plan[plan])\n",
     "        seat_count = sum(d.amount_seats for d in drivers_by_plan[plan])\n",
     "        extra_slots = seat_count - rider_count\n",
