--- a/api_allocate.ipynb
+++ b/api_allocate.ipynb
@@ -944,6 +944,7 @@
    "source": [
     "now_cst = datetime.now(ZoneInfo(\"America/Chicago\"))\n",
     "formatted_time = now_cst.strftime(\"%m-%d-%Y %H-%M-%S\")\n",
+    "print(\"foramtted time\", formatted_time)\n",
     "\n",
     "excel_to_filename = f\"./maps/rides_to/assignments_{formatted_time}.xlsx\"\n",
     "excel_back_filename = f\"./maps/rides_back/assignments_{formatted_time}.xlsx\"\n",
